// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should call navigate the previous step when click on précédent 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c12:link,
.c12:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem 4rem;
  background-color: #f2f5fa;
  border-right: 1px solid #bbcadf;
}

.c2 {
  margin: 2rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #9298af;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #4d73b8;
  border-radius: 49%;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #9298af;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 3.2rem 0;
}

.c13 {
  margin-left: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #3e486e;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 3.2rem 0;
}

.c9 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding: 1.6rem 0;
  border-bottom: 1px solid #bbcadf;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 2rem 4rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #bbcadf;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c6 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          1/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <h1
        class="c9"
      >
        test
      </h1>
      <div
        class="c10"
      >
        <p>
          Premiere Etape
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
        >
          Suivant
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should handle initialStepIndex 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c12:link,
.c12:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem 4rem;
  background-color: #f2f5fa;
  border-right: 1px solid #bbcadf;
}

.c2 {
  margin: 2rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #9298af;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #4d73b8;
  border-radius: 49%;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #9298af;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 3.2rem 0;
}

.c13 {
  margin-right: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #3e486e;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 3.2rem 0;
}

.c9 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding: 1.6rem 0;
  border-bottom: 1px solid #bbcadf;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 2rem 4rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #bbcadf;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c4 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          2/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <h1
        class="c9"
      >
        test
      </h1>
      <div
        class="c10"
      >
        <p>
          Deuxieme Etape 
          <button>
            Submit
          </button>
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
          type="button"
        >
          Précédent
        </button>
        <button
          class="c12"
        >
          Recommencer une simulation
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should handle initialValues 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c12:link,
.c12:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem 4rem;
  background-color: #f2f5fa;
  border-right: 1px solid #bbcadf;
}

.c2 {
  margin: 2rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #9298af;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #4d73b8;
  border-radius: 49%;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #9298af;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 3.2rem 0;
}

.c13 {
  margin-left: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #3e486e;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 3.2rem 0;
}

.c9 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding: 1.6rem 0;
  border-bottom: 1px solid #bbcadf;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 2rem 4rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #bbcadf;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c6 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          1/3
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          3
        </span>
        Name
      </span>
    </div>
    <div
      class="c8"
    >
      <h1
        class="c9"
      >
        test
      </h1>
      <div
        class="c10"
      >
        <p>
          Premiere Etape
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
        >
          Suivant
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should inject rules component 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c12:link,
.c12:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem 4rem;
  background-color: #f2f5fa;
  border-right: 1px solid #bbcadf;
}

.c2 {
  margin: 2rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #9298af;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #4d73b8;
  border-radius: 49%;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #9298af;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 3.2rem 0;
}

.c13 {
  margin-left: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #3e486e;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 3.2rem 0;
}

.c9 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding: 1.6rem 0;
  border-bottom: 1px solid #bbcadf;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 2rem 4rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #bbcadf;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c6 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <p>
      Rule
    </p>
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          1/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <h1
        class="c9"
      >
        test
      </h1>
      <div
        class="c10"
      >
        <p>
          Premiere Etape
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
        >
          Suivant
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should navigate to the second step when click on Suivant 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c12:link,
.c12:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem 4rem;
  background-color: #f2f5fa;
  border-right: 1px solid #bbcadf;
}

.c2 {
  margin: 2rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #9298af;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #4d73b8;
  border-radius: 49%;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #9298af;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 3.2rem 0;
}

.c13 {
  margin-right: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #3e486e;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 3.2rem 0;
}

.c9 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding: 1.6rem 0;
  border-bottom: 1px solid #bbcadf;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 2rem 4rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #bbcadf;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c4 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          2/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <h1
        class="c9"
      >
        test
      </h1>
      <div
        class="c10"
      >
        <p>
          Deuxieme Etape 
          <button>
            Submit
          </button>
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
          type="button"
        >
          Précédent
        </button>
        <button
          class="c12"
        >
          Recommencer une simulation
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should render a step 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c12:link,
.c12:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem 4rem;
  background-color: #f2f5fa;
  border-right: 1px solid #bbcadf;
}

.c2 {
  margin: 2rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 13.5rem;
  padding: 0 0.4rem;
  color: #9298af;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #4d73b8;
  border-radius: 49%;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #9298af;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 3.2rem 0;
}

.c13 {
  margin-left: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #3e486e;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 3.2rem 0;
}

.c9 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding: 1.6rem 0;
  border-bottom: 1px solid #bbcadf;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 2rem 4rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #bbcadf;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c6 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          1/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <h1
        class="c9"
      >
        test
      </h1>
      <div
        class="c10"
      >
        <p>
          Premiere Etape
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
        >
          Suivant
        </button>
      </div>
    </div>
  </form>
</div>
`;
